# Capstone3DModelling

Comparisoft/DCtest/CellLocator/CellLocator/: CellLocator.cxx
Comparisoft/DCtest/CellLocator/CellLocator/CellLocater-bin/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CellLocator.sln  CellLocator.vcxproj  CellLocator.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Comparisoft/DCtest/CellLocator/CellLocator/CellLocater-bin/Debug/: CellLocator.ilk
Comparisoft/QT/Comparisoft/: Comparisoft.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  perfit_logo.qrc
Comparisoft/QT/build-Comparisoft-Desktop_Qt_5_9_2_MinGW_32bit-Release/: Makefile  Makefile.Debug  Makefile.Release  Perfit-Compare_resource.rc  ui_mainwindow.h
Comparisoft/QT/build-Comparisoft-Desktop_Qt_5_9_2_MinGW_32bit-Release/release/: moc_mainwindow.cpp  output.txt
Comparisoft/VTK/: Align.cpp  Align.h  CMakeLists.txt  HeatMap.cpp  HeatMap.h  Point.cpp  Point.h  PointSelection.cpp  PointSelection.h  PointStorage.cpp  PointStorage.h  VSVTK.cxx  VTK.cpp  VTK.h  mainlogo.aps  mainlogo.rc
Comparisoft/VTK/VTK-bin/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Point.h  Releasefilename.html  VSVTK.vcxproj  VSVTK.vcxproj.filters
Comparisoft/VTK/VTK-bin/VSVTK.dir/Release/: mainlogo.res
Comparisoft/VTK/VTK-bin/VSVTK.dir/Release/VSVTK.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
(+20 files in other folders)
